# banking-langgraph-project

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
examples/: demo.py
src/: __init__.py  audit.py  config.py  graph.py  state.py
src/nodes/: analysis.py  compliance.py  human_review.py  output.py  planner.py  retrieval.py  semantic_retrieval.py
src/retrieval/: embeddings.py  vector_store.py
src/tools/: chunker.py  edgar.py
tests/: test_analysis.py  test_compliance.py  test_edgar.py  test_graph.py  test_human_review.py  test_phase7_interrupts.py  test_semantic_retrieval.py
tests/evals/: test_eval_harness.py
