[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sec-filing-analyst"
version = "0.1.0"
description = "Compliance-aware SEC filing analyst using LangGraph multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Mohamed (Ferry) Erouk" },
]

dependencies = [
    "langgraph>=0.2",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-core",
    "langchain-text-splitters",
    "chromadb>=0.5",
    "sentence-transformers",
    "pydantic>=2",
    "structlog",
    "httpx",
    "python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
